virtual: fix resize/overflow css issues

--- a/virtual/css/app.css
+++ b/virtual/css/app.css
@@ -1,5 +1,7 @@
 body {
   background: black;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 .app {
@@ -9,6 +11,7 @@ body {
   height: 75vh;
   overflow: hidden;
   outline: none;
+  border-bottom: 1vh solid #222;
 }
 
 .panzoom {
@@ -114,6 +117,7 @@ body {
 .deck .dgroup {
   float: left;
   width: 33.3333333333%;
+  white-space: nowrap;
 }
 .deck a {
   display: inline-block;
